Implementation of ShadowCopyFlooder, binding to commands still missing